--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -11,3 +11,8 @@ jobs:
         env:
           GITHUB_CONTEXT: ${{ toJson(github) }}
         run: echo "$GITHUB_CONTEXT"
+        
+      - name: Test Trigger II
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"
