--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -14,5 +14,8 @@ jobs:
         
       - name: Test Trigger II
         env:
-          GT: ${{ toJson(github) }}
-        run: echo "${{ toJson(github) }}"
+          COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
+        run: echo "${{ github.event.head_commit.message }}"
+
+      - if: contains(env.COMMIT_MESSAGE, 'SomeString')
+        run: echo "The commit message is some string"
