--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -17,5 +17,6 @@ jobs:
           COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
         run: echo "${{ github.event.head_commit.message }}"
 
+      - name: Test Trigger II
       - if: contains(env.COMMIT_MESSAGE, 'SomeString')
         run: echo "The commit message is some string"
