--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -7,7 +7,7 @@ jobs:
   one:
     runs-on: ubuntu-latest
     steps:
-      - name: Test Trigger
+      - name: Test Trigger I
         env:
           GITHUB_CONTEXT: ${{ toJson(github) }}
         run: echo "$GITHUB_CONTEXT"
