--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -15,8 +15,8 @@ jobs:
       - name: Test Trigger II
         env:
           COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
-        run: echo "${{ github.event.head_commit.message }}"
+        run: echo "${{ COMMIT_MESSAGE }}"
 
       - name: Test Trigger III
-        if: contains(env.COMMIT_MESSAGE, 'SomeString')
+        if: contains(${{ github.event.head_commit.message }}, 'SomeString')
         run: echo "The commit message is some string"
