--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Test Trigger II
         env:
           COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
-        run: echo "${{ COMMIT_MESSAGE }}"
+        run: echo "$COMMIT_MESSAGE"
 
       - name: Test Trigger III
         if: contains(${{ github.event.head_commit.message }}, 'SomeString')
