--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -18,5 +18,5 @@ jobs:
         run: echo "$COMMIT_MESSAGE"
 
       - name: Test Trigger III
-        if: contains(${{ github.event.head_commit.message }}, 'SomeString')
+        if: contains("$COMMIT_MESSAGE", 'SomeString')
         run: echo "The commit message is some string"
