--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -18,5 +18,7 @@ jobs:
         run: echo "$COMMIT_MESSAGE"
 
       - name: Test Trigger III
+        env:
+          COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
         if: contains("$COMMIT_MESSAGE", 'SomeString')
         run: echo "The commit message is some string"
