--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -21,4 +21,4 @@ jobs:
         env:
           COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
         if: contains(env.COMMIT_MESSAGE, 'SomeString')
-        run: echo "The commit message is some string"
+        run: echo "The commit message is some string SomeString"
