--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -22,5 +22,5 @@ jobs:
           COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
         if: contains(env.COMMIT_MESSAGE, 'SomeString')
         run: echo "The commit message is some string SomeString"
-        else:
+        if: !contains(env.COMMIT_MESSAGE, 'SomeString')
         run: echo "This was a normal commit message"
