--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -15,11 +15,13 @@ jobs:
         env:
           COMMIT_MSG: ${{ github.event.head_commit.message }}
           BRANCH: ${{ github.ref }}
+          GITHUB_CONTEXT: ${{ toJson(github) }}
         run: |
           echo "$BRANCH"
           echo "$COMMIT_MSG"
           echo "Crazy test branch"
-        
+          echo "$GITHUB_CONTEXT"
+
       - name: Trigger PyPI Release
         if: contains(env.BRANCH, 'tag') && contains(env.COMMIT_MESSAGE, 'Version Bump')
         run: |
