--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -21,7 +21,7 @@ jobs:
           echo "$COMMIT_MSG"
           echo "Crazy test branch"
           echo "$GITHUB_CONTEXT"
-
+          echo "$GITHUB_REF"
       - name: Trigger PyPI Release
         if: contains(env.BRANCH, 'tag') && contains(env.COMMIT_MESSAGE, 'Version Bump')
         run: |
