--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -9,7 +9,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-
+      - name: Print Ref
+        env:
+          BRANCH: ${{ github.ref }}
+        run: |
+          echo "$BRANCH"
       - name: Exit if not on master branch
         if: endsWith(github.ref, 'master') == false
         run: exit -1
