--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -4,7 +4,8 @@ on:
     tags:
       - v*.*.*
 jobs:
-  PyPI:
+  build:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: casperdcl/deploy-pypi@v1
