--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,14 +1,35 @@
 name: Release
 on:
-  release:
-    types: [published]
+  pull_request:
+    branches:
+      - main
+    types: [closed]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: freelawproject/deploy-pypi@v1
-        with:
-          password: ${{ secrets.pypi_token }}
-          build: true
+    if: github.event.pull_request.merged == true
+    steps: // the rest of the code
+    - name: Print SUCCESS
+      env:
+        COMMIT_MSG: ${{ github.event.head_commit.message }}
+        BRANCH: ${{ github.ref }}
+        GITHUB_CONTEXT: ${{ toJson(github) }}
+        ACTION: ${{ toJson(github.action) }}
+        MERGE_STATUS: ${{ toJson(github.pull_request.merged) }}
+
+        run: |
+          echo "Crazy test branch"
+          echo "$BRANCH"
+          echo "$GITHUB_REF"
+
+
+
+#  jobs:
+#    build:
+#      runs-on: ubuntu-latest
+#      steps:
+#        - uses: actions/checkout@v2
+#        - uses: freelawproject/deploy-pypi@v1
+#          with:
+#            password: ${{ secrets.pypi_token }}
+#            build: true
