--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -1,53 +1,53 @@
-#name: PyPI
+##name: PyPI
+##on:
+##  push:
+##    tags:
+##      - v*.*.*
+##jobs:
+##  build:
+##    runs-on: ubuntu-latest
+##    steps:
+##      - uses: actions/checkout@v2
+##      - uses: casperdcl/deploy-pypi@v1
+##        with:
+##          password: ${{ secrets.pypi_token }}
+##          build: true
+#
+#name: Sample Project
+#
 #on:
 #  push:
 #    tags:
-#      - v*.*.*
+#     - v*.*.*
+#
 #jobs:
-#  build:
+#  PyPI:
 #    runs-on: ubuntu-latest
 #    steps:
-#      - uses: actions/checkout@v2
-#      - uses: casperdcl/deploy-pypi@v1
-#        with:
-#          password: ${{ secrets.pypi_token }}
-#          build: true
-
-name: Sample Project
-
-on:
-  push:
-    tags:
-     - v*.*.*
-
-jobs:
-  PyPI:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Test Trigger I
-        env:
-          COMMIT_MSG: ${{ github.event.head_commit.message }}
-          BRANCH: ${{ github.ref }}
-          GITHUB_CONTEXT: ${{ toJson(github) }}
-          ACTION: ${{ toJson(github.action) }}
-          MERGE_STATUS: ${{ toJson(github.pull_request.merged) }}
-
-
-        run: |
-          echo "$BRANCH"
-          echo "$COMMIT_MSG"
-          echo "Crazy test branch"
-          echo "$GITHUB_CONTEXT"
-          echo "$GITHUB_REF"
-
-      - name: Trigger PyPI Release
-        if: contains(env.BRANCH, 'tag') && contains(env.COMMIT_MESSAGE, 'Version Bump')
-        run: |
-          echo "Version Bump on Master triggered. Sending code to PyPI"
-          echo "Fake Sending twine execution"
-
-
-      - name: Read actions
-        run: |
-          echo "$ACTION"
-          echo "$MERGE_STATUS"
+#      - name: Test Trigger I
+#        env:
+#          COMMIT_MSG: ${{ github.event.head_commit.message }}
+#          BRANCH: ${{ github.ref }}
+#          GITHUB_CONTEXT: ${{ toJson(github) }}
+#          ACTION: ${{ toJson(github.action) }}
+#          MERGE_STATUS: ${{ toJson(github.pull_request.merged) }}
+#
+#
+#        run: |
+#          echo "$BRANCH"
+#          echo "$COMMIT_MSG"
+#          echo "Crazy test branch"
+#          echo "$GITHUB_CONTEXT"
+#          echo "$GITHUB_REF"
+#
+#      - name: Trigger PyPI Release
+#        if: contains(env.BRANCH, 'tag') && contains(env.COMMIT_MESSAGE, 'Version Bump')
+#        run: |
+#          echo "Version Bump on Master triggered. Sending code to PyPI"
+#          echo "Fake Sending twine execution"
+#
+#
+#      - name: Read actions
+#        run: |
+#          echo "$ACTION"
+#          echo "$MERGE_STATUS"
