--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,5 +1,7 @@
 name: Release
 on:
+  tags:
+    - v*.*.*
   pull_request:
     branches:
       - main
@@ -22,8 +24,6 @@ jobs:
         echo "Crazy test branch"
         echo "$BRANCH"
         echo "$GITHUB_REF"
-
-
 
 #  jobs:
 #    build:
