--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -25,12 +25,9 @@ jobs:
         echo "$BRANCH"
         echo "$GITHUB_REF"
 
-#  jobs:
-#    build:
-#      runs-on: ubuntu-latest
-#      steps:
-#        - uses: actions/checkout@v2
-#        - uses: freelawproject/deploy-pypi@v1
-#          with:
-#            password: ${{ secrets.pypi_token }}
-#            build: true
+  more:
+    runs-on: ubuntu-latest
+      if: github.event.pull_request.merged == false
+      steps:
+      - name: Print false
+        run: echo "false"
