--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -24,6 +24,7 @@ jobs:
         echo "Crazy test branch"
         echo "$BRANCH"
         echo "$GITHUB_REF"
+        echo "$GITHUB_CONTEXT"
 
   more:
     runs-on: ubuntu-latest
