--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -25,6 +25,7 @@ jobs:
         echo "$BRANCH"
         echo "$GITHUB_REF"
         echo "$GITHUB_CONTEXT"
+        echo "this shouldnt run"
 
   more:
     runs-on: ubuntu-latest
@@ -38,4 +39,4 @@ jobs:
     if: github.event.pull_request.merged == true
     steps:
     - name: Print false
-      run: echo "true its true and lets say Untagged?"
+      run: echo "true its true and lets say  can this work without a tag?"
