--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,30 +1,39 @@
-on: push
+name: Check Deployment and versions
+
+on:
+  push:
+    tags:
+      - v*.*.*
 
 jobs:
-  one:
+  check-tag-branch:
     runs-on: ubuntu-latest
     steps:
-      - name: Dump GitHub context
-        env:
-          GITHUB_CONTEXT: ${{ toJson(github) }}
-        run: echo "$GITHUB_CONTEXT"
-      - name: Dump job context
-        env:
-          JOB_CONTEXT: ${{ toJson(job) }}
-        run: echo "$JOB_CONTEXT"
-      - name: Dump steps context
-        env:
-          STEPS_CONTEXT: ${{ toJson(steps) }}
-        run: echo "$STEPS_CONTEXT"
-      - name: Dump runner context
-        env:
-          RUNNER_CONTEXT: ${{ toJson(runner) }}
-        run: echo "$RUNNER_CONTEXT"
-      - name: Dump strategy context
-        env:
-          STRATEGY_CONTEXT: ${{ toJson(strategy) }}
-        run: echo "$STRATEGY_CONTEXT"
-      - name: Dump matrix context
-        env:
-          MATRIX_CONTEXT: ${{ toJson(matrix) }}
-        run: echo "$MATRIX_CONTEXT"
+    - name: get tag commit hash
+      id: tag-commit-hash
+      run: |
+        hash=${{ GITHUB.SHA }}
+        echo "::set-output name=tag-hash::${hash}"
+        echo $hash
+    - name: checkout master
+      uses: actions/checkout@v2
+      with:
+        ref: master
+    - name: get latest master commit hash
+      id: master-commit-hash
+      run: |
+        hash=$(git log -n1 --format=format:"%H")
+        echo "::set-output name=master-hash::${hash}"
+        echo $hash
+    - name: exit if tag commit hash don't match master commit hash
+      if: steps.tag-commit-hash.outputs.tag-hash != steps.master-commit-hash.outputs.master-hash
+      run: exit 1
+
+  build-base:
+    needs: [check-tag-branch]
+    runs-on: ubuntu-latest
+    steps:
+    - name: setup python
+      uses: actions/setup-python@v1
+    - name: echo something
+      run: echo "This steps run successfully"
