Move workflows ad

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -19,7 +19,7 @@ jobs:
     - name: checkout master
       uses: actions/checkout@v2
       with:
-        ref: master
+        ref: main
     - name: get latest master commit hash
       id: master-commit-hash
       run: |
