--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -3,21 +3,25 @@ name: Release a yml
 on:
   pull_request:
     types: [opened, closed]
-  branches:
-    - main
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    if: github.event.pull_request.merged == true
-    steps:
-    - name: Print SUCCESS
-      env:
-        COMMIT_MSG: ${{ github.event.head_commit.message }}
-        BRANCH: ${{ github.ref }}
-        GITHUB_CONTEXT: ${{ toJson(github) }}
-        ACTION: ${{ toJson(github.action) }}
-        MERGE_STATUS: ${{ toJson(github.pull_request.merged) }}
-
-      run: |
-        echo "$GITHUB_CONTEXT"
+#on:
+#  pull_request:
+#    types: [opened, closed]
+#  branches:
+#    - main
+#
+#jobs:
+#  build:
+#    runs-on: ubuntu-latest
+#    if: github.event.pull_request.merged == true
+#    steps:
+#    - name: Print SUCCESS
+#      env:
+#        COMMIT_MSG: ${{ github.event.head_commit.message }}
+#        BRANCH: ${{ github.ref }}
+#        GITHUB_CONTEXT: ${{ toJson(github) }}
+#        ACTION: ${{ toJson(github.action) }}
+#        MERGE_STATUS: ${{ toJson(github.pull_request.merged) }}
+#
+#      run: |
+#        echo "$GITHUB_CONTEXT"
