--- a/.github/workflows/curl.yml
+++ b/.github/workflows/curl.yml
@@ -22,12 +22,16 @@
 name: Check Deployment and versions
 on:
   push:
+
 jobs:
-  check-tag-branch:
-  uses: satak/webrequest-action@master
-  with:
-    url: https://api.github.com/repos/flooie/sampleproject/tags
-    method: GET
-    run: |
-      $output = '${{ steps.webhook.outputs.output }}' | ConvertFrom-Json
-      echo "$output"
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: satak/webrequest-action@master
+    with:
+      url: https://api.github.com/repos/flooie/sampleproject/tags
+      method: GET
+      run: |
+        $output = '${{ steps.webhook.outputs.output }}' | ConvertFrom-Json
+        echo "$output"
