Move workflows ad

--- a/.github/workflows/curl.yml
+++ b/.github/workflows/curl.yml
@@ -50,4 +50,7 @@ jobs:
                 accept: 200
                 body: '{ "name": "breeze",  "job": "devops" }'
             - name: 'Use response'
-              run: echo ${{ steps.api.outputs.response }}
+              run: |
+                echo ${{ steps.api.outputs.response }}
+                echo ${{ steps.api.outputs.response[0] }}
+                echo ${{ steps.api.outputs.response[0].name }}
