--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -39,11 +39,10 @@ jobs:
 
       run: |
         echo "false"
-        echo "$BRANCH"
-        echo "$GITHUB_REF"
-        echo "$GITHUB_CONTEXT"
-        echo "this shouldnt run"
-        echo "$LABELS"
+        echo "Branch = $BRANCH"
+        echo "Ref = $GITHUB_REF"
+        echo "full context = $GITHUB_CONTEXT"
+        echo "labels = $LABELS"
 
   final:
     runs-on: ubuntu-latest
