--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -33,7 +33,10 @@ jobs:
         COMMIT_MSG: ${{ github.event.head_commit.message }}
         BRANCH: ${{ github.ref }}
         GITHUB_CONTEXT: ${{ toJson(github) }}
-        LABELS: ${{ github.event.pull_request.labels.name }}
+        EVENT: ${{ github.event }}
+        PRs: ${{ github.event.pull_request }}
+        LABELS: ${{ github.event.pull_request.labels }}
+        NAMES: ${{ github.event.pull_request.labels.name }}
         ACTION: ${{ toJson(github.action) }}
         MERGE_STATUS: ${{ toJson(github.pull_request.merged) }}
 
@@ -42,8 +45,13 @@ jobs:
         echo "commit msg = $GITHUB_CONTEXT"
         echo "Branch = $BRANCH"
         echo "Ref = $GITHUB_REF"
-        echo "full context = COMMIT_MSG"
+        echo "full context = $COMMIT_MSG"
         echo "labels = $LABELS"
+        echo "EVENTs = $EVENT"
+        echo "PRs = $PRs"
+        echo "$NAMEs = $NAMES"
+        echo "ACTIONs = $ACTION"
+        echo "MERGE_STATUSes = $MERGE_STATUS"
 
   final:
     runs-on: ubuntu-latest
