--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -33,7 +33,7 @@ jobs:
         COMMIT_MSG: ${{ github.event.head_commit.message }}
         BRANCH: ${{ github.ref }}
         GITHUB_CONTEXT: ${{ toJson(github) }}
-        PRs: ${{ github.event.pull_request }}
+        PRs: ${{ toJson(github.event.pull_request) }}
         LABELS: ${{ github.event.pull_request.labels }}
         NAMES: ${{ github.event.pull_request.labels.name }}
         ACTION: ${{ toJson(github.action) }}
