--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -34,8 +34,8 @@ jobs:
         BRANCH: ${{ github.ref }}
         GITHUB_CONTEXT: ${{ toJson(github) }}
         PRs: ${{ toJson(github.event.pull_request) }}
-        LABELS: ${{ github.event.pull_request.labels }}
-        NAMES: ${{ github.event.pull_request.labels.name }}
+        LABELS: ${{ toJson(github.event.pull_request.labels) }}
+        NAMES: ${{ toJson(github.event.pull_request.labels.name) }}
         ACTION: ${{ toJson(github.action) }}
         MERGE_STATUS: ${{ toJson(github.event.pull_request.merged) }}
 
