--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -42,7 +42,7 @@ jobs:
         MERGE_STATUS: ${{ toJson(github.event.pull_request.merged) }}
 
     - name: Next
-      if $LABELSII == "versionbump"
+      if "$LABELSII" == "versionbump"
       run: |
         echo "----run it----"
         echo "labels = $LABELS"
