--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -9,7 +9,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    if: github.event.pull_request.merged == true
     steps:
     - name: Print SUCCESS
       env:
@@ -18,11 +17,11 @@ jobs:
         GITHUB_CONTEXT: ${{ toJson(github) }}
         ACTION: ${{ toJson(github.action) }}
         MERGE_STATUS: ${{ toJson(github.pull_request.merged) }}
-
-      run: |
-        echo "$BRANCH"
-        echo "$GITHUB_CONTEXT"
-        echo "<------->"
+      if "$COMMIT_MSG" != "Move workflows"
+        run: |
+          echo "$BRANCH"
+          echo "$GITHUB_CONTEXT"
+          echo "<------->"
 
   more:
     runs-on: ubuntu-latest
@@ -52,10 +51,19 @@ jobs:
 
   final:
     runs-on: ubuntu-latest
-    if: github.event.pull_request.merged == true
     steps:
-    - name: Print false
-      run: echo "true its true and lets say  can this work without a tag?"
+    - name: Print SUCCESS
+      env:
+        COMMIT_MSG: ${{ github.event.head_commit.message }}
+        BRANCH: ${{ github.ref }}
+        GITHUB_CONTEXT: ${{ toJson(github) }}
+        ACTION: ${{ toJson(github.action) }}
+        MERGE_STATUS: ${{ toJson(github.pull_request.merged) }}
+      if $COMMIT_MSG == "Move workflows"
+        run: |
+          echo "$BRANCH"
+          echo "$GITHUB_CONTEXT"
+          echo "<------->"
 
 
 #  OK asdfasdfsa
