--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -7,57 +7,57 @@ on:
 
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    if: github.event.pull_request.merged == true
-    steps:
-    - name: Print SUCCESS
-      env:
-        COMMIT_MSG: ${{ github.event.head_commit.message }}
-        BRANCH: ${{ github.ref }}
-        GITHUB_CONTEXT: ${{ toJson(github) }}
-        ACTION: ${{ toJson(github.action) }}
-        MERGE_STATUS: ${{ toJson(github.pull_request.merged) }}
-
-      run: |
-        echo "$BRANCH"
-        echo "$GITHUB_CONTEXT"
-        echo "<------->"
-
-  more:
-    runs-on: ubuntu-latest
-    if: github.event.pull_request.merged == false
-    steps:
-    - name: Print false
-      env:
-        COMMIT_MSG: ${{ github.event.head_commit.message }}
-        BRANCH: ${{ github.ref }}
-        GITHUB_CONTEXT: ${{ toJson(github) }}
-        PRs: ${{ toJson(github.event.pull_request) }}
-        LABELS: ${{ toJson(github.event.pull_request.labels) }}
-        LABELSI: ${{ toJson(github.event.pull_request.labels[0]) }}
-        LABELSII: ${{ toJson(github.event.pull_request.labels[0].name) }}
-        NAMES: ${{ toJson(github.event.pull_request.labels.name) }}
-        ACTION: ${{ toJson(github.action) }}
-        MERGE_STATUS: ${{ toJson(github.event.pull_request.merged) }}
-
-      run: |
-        echo "----run it----"
-        echo "labels = $LABELS"
-        echo "labelsI = $LABELSI"
-        echo "labelsII = $LABELSII"
-        echo "labelsII = $BRANCH"
+#  build:
+#    runs-on: ubuntu-latest
+#    if: github.event.pull_request.merged == true
+#    steps:
+#    - name: Print SUCCESS
+#      env:
+#        COMMIT_MSG: ${{ github.event.head_commit.message }}
+#        BRANCH: ${{ github.ref }}
+#        GITHUB_CONTEXT: ${{ toJson(github) }}
+#        ACTION: ${{ toJson(github.action) }}
+#        MERGE_STATUS: ${{ toJson(github.pull_request.merged) }}
+#
+#      run: |
+#        echo "$BRANCH"
+#        echo "$GITHUB_CONTEXT"
+#        echo "<------->"
+#
+#  more:
+#    runs-on: ubuntu-latest
+#    if: github.event.pull_request.merged == false
+#    steps:
+#    - name: Print false
+#      env:
+#        COMMIT_MSG: ${{ github.event.head_commit.message }}
+#        BRANCH: ${{ github.ref }}
+#        GITHUB_CONTEXT: ${{ toJson(github) }}
+#        PRs: ${{ toJson(github.event.pull_request) }}
+#        LABELS: ${{ toJson(github.event.pull_request.labels) }}
+#        LABELSI: ${{ toJson(github.event.pull_request.labels[0]) }}
+#        LABELSII: ${{ toJson(github.event.pull_request.labels[0].name) }}
+#        NAMES: ${{ toJson(github.event.pull_request.labels.name) }}
+#        ACTION: ${{ toJson(github.action) }}
+#        MERGE_STATUS: ${{ toJson(github.event.pull_request.merged) }}
+#
+#      run: |
+#        echo "----run it----"
+#        echo "labels = $LABELS"
+#        echo "labelsI = $LABELSI"
+#        echo "labelsII = $LABELSII"
+#        echo "labelsII = $BRANCH"
 
 
 
   final:
     runs-on: ubuntu-latest
     steps:
-      - name: My first step
-        env:
-          VB: ${{ toJson(github.event.pull_request.labels[0].name) }}
-        if: {{ github.event_name == 'pull_request' }}
-        run: echo "vb = $VB"
+    - name: My first step
+      env:
+        VB: ${{ toJson(github.event.pull_request.labels[0].name) }}
+      if: {{ github.event_name == 'pull_request' }}
+      run: echo "vb = $VB"
 
 #    if: github.event.pull_request.merged == false
 #    steps:
