--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -41,21 +41,22 @@ jobs:
 #        ACTION: ${{ toJson(github.action) }}
 #        MERGE_STATUS: ${{ toJson(github.event.pull_request.merged) }}
 #
+      if "1" == "1"
       run: |
         echo "----run it----"
-        echo "cv = $VB"
+        echo "VB = $VB"
 #        echo "labelsI = $LABELSI"
 #        echo "labelsII = $LABELSII"
 #        echo "labelsII = $BRANCH"
 
 
 
-  final:
-    runs-on: ubuntu-latest
-    steps:
-    - name: My first step
-      if: {{ toJson(github.event.pull_request.labels[0].name) == 'versionbump' }}
-      run: echo "asdfasfasdfasdf"
+#  final:
+#    runs-on: ubuntu-latest
+#    steps:
+#    - name: My first step
+#      if: {{ toJson(github.event.pull_request.labels[0].name) == 'versionbump' }}
+#      run: echo "asdfasfasdfasdf"
 
 #    if: github.event.pull_request.merged == false
 #    steps:
