--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -26,28 +26,14 @@ jobs:
 #
   more:
     runs-on: ubuntu-latest
-#    if: github.event.pull_request.merged == false
     steps:
     - name: Print false
       env:
-#        COMMIT_MSG: ${{ github.event.head_commit.message }}
-#        BRANCH: ${{ github.ref }}
-#        GITHUB_CONTEXT: ${{ toJson(github) }}
-#        PRs: ${{ toJson(github.event.pull_request) }}
-#        LABELS: ${{ toJson(github.event.pull_request.labels) }}
-#        LABELSI: ${{ toJson(github.event.pull_request.labels[0]) }}
         VB: ${{ toJson(github.event.pull_request.labels[0].name) }}
-#        NAMES: ${{ toJson(github.event.pull_request.labels.name) }}
-#        ACTION: ${{ toJson(github.action) }}
-#        MERGE_STATUS: ${{ toJson(github.event.pull_request.merged) }}
-#
-      if: "1" == "1"
+      if: $VB == "versionbump"
       run: |
         echo "----run it----"
         echo "VB = $VB"
-#        echo "labelsI = $LABELSI"
-#        echo "labelsII = $LABELSII"
-#        echo "labelsII = $BRANCH"
 
 
 
