--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Print false
       env:
         VB: ${{ toJson(github.event.pull_request.labels[0].name) }}
-      if: $VB == "versionbump"
+      if: $VB == 'versionbump'
       run: |
         echo "----run it----"
         echo "VB = $VB"
