--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -30,9 +30,10 @@ jobs:
     - name: Print false
       env:
         VB: ${{ toJson(github.event.pull_request.labels[0].name) }}
-#      if: contains(env.VB, 'versionbump')
+      if: contains(env.VB, 'versionbump')
       run: |
         echo "----run it----"
+        echo "PR contains version bump send to PYPI"
         echo "VB = $VB"
 
 
